--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "plyr": "^3.7.2",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
+    "vue-plyr": "^7.0.0",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
