--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "hls.js": "^1.2.4",
     "plyr": "^3.7.2",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
