--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-plyr": "^7.0.0",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
